--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "element-plus": "^2.13.2",
+    "mockjs": "^1.1.0",
     "vue": "^3.5.24",
     "vue-router": "^5.0.2"
   },
