--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.13.5",
     "element-plus": "^2.13.2",
     "mockjs": "^1.1.0",
     "vue": "^3.5.24",
